--- a/E-Commerce Clothing Classifier Model/notebook.ipynb
+++ b/E-Commerce Clothing Classifier Model/notebook.ipynb
@@ -207,6 +207,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the number of classes\n",
+    "classes = train_data.classes\n",
+    "num_classes = len(classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define some relevant variables\n",
+    "num_input_channels = 1\n",
+    "num_output_channels = 16\n",
+    "image_size = train_data[0][0].shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
