define cnn class

--- a/E-Commerce Clothing Classifier Model/notebook.ipynb
+++ b/E-Commerce Clothing Classifier Model/notebook.ipynb
@@ -97,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
-    "import torch.nn as mm\n",
+    "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchmetrics import Accuracy, Precision, Recall"
@@ -230,21 +230,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Define CNN\n",
+    "class MultiClassImageClassifier(nn.Module):\n",
+    "    \n",
+    "    # Define the inint method\n",
+    "    def __init__(self, num_classes):\n",
+    "        super(MultiClassImageClassifier, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(num_input_channels, num_output_channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.maxpoll = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        \n",
+    "        # Create a fully connected layer\n",
+    "        self.fc = nn.Linear(num_output_channels * (image_size//2)**2, num_classes)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        # Pass inputs through each layer\n",
+    "        x = self.conv1(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.maxpoll(x)\n",
+    "        x = self.flatten(x)\n",
+    "        x = self.fc(x)\n",
+    "        return x"
+   ]
   },
   {
    "cell_type": "code",
