Define trianing function

--- a/E-Commerce Clothing Classifier Model/notebook.ipynb
+++ b/E-Commerce Clothing Classifier Model/notebook.ipynb
@@ -260,6 +260,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the training set DataLoader\n",
+    "dataloader_train = DataLoader(\n",
+    "    train_data, \n",
+    "    batch_size=10, \n",
+    "    shuffle=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define trianing function\n",
+    "def train_model(optimizer, net, num_epochs):\n",
+    "    num_processed = 0\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    for epoch in range(num_epochs):\n",
+    "        running_loss = 0\n",
+    "        num_processed = 0\n",
+    "        for features, labels in dataloader_train:\n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = net(features)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            running_loss += loss.item()\n",
+    "            num_processed += len(labels)\n",
+    "        print(f'epoch {epoch}, loss: {running_loss / num_processed}')\n",
+    "    \n",
+    "    train_loss = running_loss / len(dataloader_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
