--- a/E-Commerce Clothing Classifier Model/notebook.ipynb
+++ b/E-Commerce Clothing Classifier Model/notebook.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +296,64 @@
     "        print(f'epoch {epoch}, loss: {running_loss / num_processed}')\n",
     "    \n",
     "    train_loss = running_loss / len(dataloader_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 0, loss: 0.04020518061496162\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train for 1 epcho\n",
+    "net = MultiClassImageClassifier(num_classes)\n",
+    "optimizer = optim.Adam(net.parameters(), lr=0.001)\n",
+    "\n",
+    "train_model(\n",
+    "    optimizer=optimizer, \n",
+    "    net=net,\n",
+    "    num_epochs=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test the model on the test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the test set DataLoader\n",
+    "dataloader_train = DataLoader(\n",
+    "    test_data, \n",
+    "    batch_size=10,\n",
+    "    shuffle=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the metrics\n",
+    "accuracy_metric = Accuracy(task='multiclass', num_classes=num_classes)\n",
+    "presicion_metric = Precision(task='multiclass', num_classes=num_classes, average=None)\n",
+    "recall_metric = Recall(task='multiclass', num_classes=num_classes, average=None)"
    ]
   },
   {
