--- a/E-Commerce Clothing Classifier Model/notebook.ipynb
+++ b/E-Commerce Clothing Classifier Model/notebook.ipynb
@@ -332,12 +332,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the test set DataLoader\n",
-    "dataloader_train = DataLoader(\n",
+    "dataloader_test = DataLoader(\n",
     "    test_data, \n",
     "    batch_size=10,\n",
     "    shuffle=False\n",
@@ -346,14 +346,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the metrics\n",
     "accuracy_metric = Accuracy(task='multiclass', num_classes=num_classes)\n",
-    "presicion_metric = Precision(task='multiclass', num_classes=num_classes, average=None)\n",
+    "precision_metric = Precision(task='multiclass', num_classes=num_classes, average=None)\n",
     "recall_metric = Recall(task='multiclass', num_classes=num_classes, average=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net.eval()\n",
+    "predictions = []\n",
+    "for i, (features, labels) in enumerate(dataloader_test):\n",
+    "    output = net.forward(features.reshape(-1, 1, image_size, image_size))\n",
+    "    cat = torch.argmax(output, dim=-1)\n",
+    "    predictions.extend(cat.tolist())\n",
+    "    accuracy_metric(cat, labels)\n",
+    "    precision_metric(cat, labels)\n",
+    "    recall_metric(cat, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.9003833532333374\n",
+      "Precision (per class):  [0.8476049900054932, 0.9664167165756226, 0.8689544796943665, 0.9067513346672058, 0.8268320560455322, 0.9869996309280396, 0.7153656482696533, 0.93421471118927, 0.9760268330574036, 0.9791844487190247]\n",
+      "Recall (per class):  [0.8611666560173035, 0.9879999756813049, 0.8144999742507935, 0.9043333530426025, 0.8443333506584167, 0.9616666436195374, 0.7254999876022339, 0.9775000214576721, 0.9703333377838135, 0.9564999938011169]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute the metrics\n",
+    "accuracy = accuracy_metric.compute().item()\n",
+    "precision = precision_metric.compute().tolist()\n",
+    "recall = recall_metric.compute().tolist()\n",
+    "print('Accuracy: ', accuracy)\n",
+    "print('Precision (per class): ', precision)\n",
+    "print('Recall (per class): ', recall)"
    ]
   },
   {
