preprocess text data and create PyTorch datasets
- Implement word-to-index mappings and convert text data to numerical indices
- Add padding/truncating function to ensure fixed-length input sequences
- Split the dataset into training and test sets using train_test_split
- Convert NumPy arrays to PyTorch tensors and create TensorDataset objects for training and test data

--- a/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
+++ b/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
@@ -100,19 +100,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nltk' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnltk\u001b[49m\u001b[38;5;241m.\u001b[39mdownload(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpunkt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nltk' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Error loading punkt: <urlopen error [SSL:\n",
+      "[nltk_data]     CERTIFICATE_VERIFY_FAILED] certificate verify failed:\n",
+      "[nltk_data]     unable to get local issuer certificate (_ssl.c:1108)>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -121,17 +129,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Imprt data and labels\n",
-    "with open(\"words.json\", 'r') as f1:\n",
+    "with open(\"data/words.json\", 'r') as f1:\n",
     "    words = json.load(f1)\n",
-    "with open(\"text.json\", 'r') as f2:\n",
+    "with open(\"data/text.json\", 'r') as f2:\n",
     "    text = json.load(f2)\n",
-    "labels = np.load('labels.npy')"
+    "labels = np.load('data/labels.npy')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionaries to store the word to index mappings and vice versa\n",
+    "word2idx = {o:i for i, o in enumerate(words)}\n",
+    "idx2word = {i:o for i, o in enumerate(words)}\n",
+    "\n",
+    "# Looking up the mapping dictionary and assigning the index to the respective words\n",
+    "for i, sentece in enumerate(text):\n",
+    "    text[i] = [word2idx[word] if word in word2idx else 0 for word in sentece]\n",
+    "    \n",
+    "# Defining a function that either shortens sentences or pads sentences with 0 ot a fixed length\n",
+    "def pad_input(sentences, seq_len):\n",
+    "    features = np.zeros((len(sentences), seq_len), dtype=int)\n",
+    "    for ii, review in enumerate(sentences):\n",
+    "        if len(review) !=0:\n",
+    "            features[ii, -len(review):] = np.array(review)[:seq_len]\n",
+    "        return features\n",
+    "\n",
+    "text = pad_input(text, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting dataset\n",
+    "train_text, test_text, train_label, test_label = train_test_split(text, labels, test_size=0.2, random_state=42)\n",
+    "\n",
+    "train_data = TensorDataset(torch.from_numpy(train_text), torch.from_numpy(train_label).long())\n",
+    "test_data = TensorDataset(torch.from_numpy(test_text), torch.from_numpy(test_label).long())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
