--- a/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
+++ b/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
@@ -181,6 +181,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 400\n",
+    "train_loader = DataLoader(train_data, shuffle=True, batch_size=batch_size)\n",
+    "test_loader = DataLoader(test_data, shuffle=False, batch_size=batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the classifier class\n",
+    "class TicketClassifier(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, vocab_size, embed_dim, target_size):\n",
+    "        super(TicketClassifier, self).__init__()\n",
+    "        self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
+    "        self.conv = nn.Conv1d(embed_dim, embed_dim, kernel_size=3, stride=1, padding=1)\n",
+    "        self.fc = nn.Linear(embed_dim, target_size)\n",
+    "        \n",
+    "    def forward(self, text):\n",
+    "        embedded = self.embedding(text).permute(0, 2, 1)\n",
+    "        conved = F.relu(self.conv(embedded))\n",
+    "        conved = conved.mean(dim=2)\n",
+    "        return self.fc(conved)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
