--- a/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
+++ b/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
@@ -215,6 +215,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = len(word2idx) + 1\n",
+    "target_size = len(np.unique(labels))\n",
+    "embedding_dim = 64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an instance of the Ticketclassifier class\n",
+    "model = TicketClassifier(vocab_size, embedding_dim, target_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = 0.05\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "epochs = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
