add training loop and evaluation metrics
- Implement training loop with loss calculation, backpropagation, and optimizer step
- Track and print average loss for each epoch
- Initialize accuracy, precision, and recall metrics for multiclass classification

--- a/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
+++ b/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +244,48 @@
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
     "epochs = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1, Loss: 0.00583980193734169\n",
+      "Epoch: 2, Loss: 0.0040495507717132565\n",
+      "Epoch: 3, Loss: 0.004031120210886001\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "model.train()\n",
+    "for i in range(epochs):\n",
+    "    running_loss, num_processed = 0,0\n",
+    "    for inputs, labels in train_loader:\n",
+    "        model.zero_grad()\n",
+    "        output = model(inputs)\n",
+    "        loss = criterion(output, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item()\n",
+    "        num_processed += len(inputs)\n",
+    "    print(f\"Epoch: {i+1}, Loss: {running_loss/num_processed}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_metric = Accuracy(task=\"multiclass\", num_classes=5)\n",
+    "precision_metric = Precision(task='multiclass', num_classes=5, average=None)\n",
+    "recall_metric = Recall(task='multiclass', num_classes=5, average=None)"
    ]
   },
   {
