evaluate model and compute metrics on test set
- Set model to eval mode
- Predict classes for test data
- Update accuracy, precision, and recall metrics
- Print final accuracy, precision, and recall

--- a/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
+++ b/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
@@ -290,6 +290,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate model on test set\n",
+    "model.eval()\n",
+    "predicted = []\n",
+    "\n",
+    "for i, (inputs, labels) in enumerate(test_loader):\n",
+    "    output = model(inputs)\n",
+    "    cat = torch.argmax(output, dim=-1)\n",
+    "    predicted.extend(cat.tolist())\n",
+    "    accuracy_metric(cat, labels)\n",
+    "    precision_metric(cat, labels)\n",
+    "    recall_metric(cat, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.19200000166893005\n",
+      "Precision (per class): [0.19200000166893005, 0.0, 0.0, 0.0, 0.0]\n",
+      "Recall (per class): [1.0, 0.0, 0.0, 0.0, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = accuracy_metric.compute().item()\n",
+    "precision = precision_metric.compute().tolist()\n",
+    "recall = recall_metric.compute().tolist()\n",
+    "print('Accuracy:', accuracy)\n",
+    "print('Precision (per class):', precision)\n",
+    "print('Recall (per class):', recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
