final adjusment / fixing accuracy rate issue

--- a/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
+++ b/II. Service Desk Ticket Classification with Deep Learning/notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,35 +21,23 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: torchmetrics in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from -r requirements.txt (line 1)) (1.4.0.post0)\n",
-      "Collecting nltk (from -r requirements.txt (line 2))\n",
-      "  Using cached nltk-3.8.1-py3-none-any.whl.metadata (2.8 kB)\n",
-      "Collecting pandas (from -r requirements.txt (line 3))\n",
-      "  Using cached pandas-2.0.3-cp38-cp38-macosx_10_9_x86_64.whl.metadata (18 kB)\n",
-      "Collecting scikit-learn (from -r requirements.txt (line 4))\n",
-      "  Using cached scikit_learn-1.3.2-cp38-cp38-macosx_10_9_x86_64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: nltk in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from -r requirements.txt (line 2)) (3.8.1)\n",
+      "Requirement already satisfied: pandas in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from -r requirements.txt (line 3)) (2.0.3)\n",
+      "Requirement already satisfied: scikit-learn in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from -r requirements.txt (line 4)) (1.3.2)\n",
       "Requirement already satisfied: torch in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from -r requirements.txt (line 5)) (2.2.2)\n",
       "Requirement already satisfied: numpy>1.20.0 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from torchmetrics->-r requirements.txt (line 1)) (1.24.4)\n",
       "Requirement already satisfied: packaging>17.1 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from torchmetrics->-r requirements.txt (line 1)) (24.1)\n",
       "Requirement already satisfied: lightning-utilities>=0.8.0 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from torchmetrics->-r requirements.txt (line 1)) (0.11.3.post0)\n",
       "Requirement already satisfied: typing-extensions in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from torchmetrics->-r requirements.txt (line 1)) (4.12.2)\n",
-      "Collecting click (from nltk->-r requirements.txt (line 2))\n",
-      "  Using cached click-8.1.7-py3-none-any.whl.metadata (3.0 kB)\n",
-      "Collecting joblib (from nltk->-r requirements.txt (line 2))\n",
-      "  Using cached joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
-      "Collecting regex>=2021.8.3 (from nltk->-r requirements.txt (line 2))\n",
-      "  Downloading regex-2024.5.15-cp38-cp38-macosx_10_9_x86_64.whl.metadata (40 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m40.9/40.9 kB\u001b[0m \u001b[31m1.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hCollecting tqdm (from nltk->-r requirements.txt (line 2))\n",
-      "  Using cached tqdm-4.66.4-py3-none-any.whl.metadata (57 kB)\n",
+      "Requirement already satisfied: click in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from nltk->-r requirements.txt (line 2)) (8.1.7)\n",
+      "Requirement already satisfied: joblib in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from nltk->-r requirements.txt (line 2)) (1.4.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from nltk->-r requirements.txt (line 2)) (2024.5.15)\n",
+      "Requirement already satisfied: tqdm in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from nltk->-r requirements.txt (line 2)) (4.66.4)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from pandas->-r requirements.txt (line 3)) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas->-r requirements.txt (line 3))\n",
-      "  Using cached pytz-2024.1-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.1 (from pandas->-r requirements.txt (line 3))\n",
-      "  Using cached tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Collecting scipy>=1.5.0 (from scikit-learn->-r requirements.txt (line 4))\n",
-      "  Using cached scipy-1.10.1-cp38-cp38-macosx_10_9_x86_64.whl.metadata (53 kB)\n",
-      "Collecting threadpoolctl>=2.0.0 (from scikit-learn->-r requirements.txt (line 4))\n",
-      "  Using cached threadpoolctl-3.5.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from pandas->-r requirements.txt (line 3)) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from pandas->-r requirements.txt (line 3)) (2024.1)\n",
+      "Requirement already satisfied: scipy>=1.5.0 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from scikit-learn->-r requirements.txt (line 4)) (1.10.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from scikit-learn->-r requirements.txt (line 4)) (3.5.0)\n",
       "Requirement already satisfied: filelock in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from torch->-r requirements.txt (line 5)) (3.15.4)\n",
       "Requirement already satisfied: sympy in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from torch->-r requirements.txt (line 5)) (1.13.0)\n",
       "Requirement already satisfied: networkx in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from torch->-r requirements.txt (line 5)) (3.1)\n",
@@ -58,21 +46,7 @@
       "Requirement already satisfied: setuptools in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from lightning-utilities>=0.8.0->torchmetrics->-r requirements.txt (line 1)) (41.2.0)\n",
       "Requirement already satisfied: six>=1.5 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 3)) (1.16.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from jinja2->torch->-r requirements.txt (line 5)) (2.1.5)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from sympy->torch->-r requirements.txt (line 5)) (1.3.0)\n",
-      "Using cached nltk-3.8.1-py3-none-any.whl (1.5 MB)\n",
-      "Using cached pandas-2.0.3-cp38-cp38-macosx_10_9_x86_64.whl (11.7 MB)\n",
-      "Using cached scikit_learn-1.3.2-cp38-cp38-macosx_10_9_x86_64.whl (10.1 MB)\n",
-      "Using cached joblib-1.4.2-py3-none-any.whl (301 kB)\n",
-      "Using cached pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
-      "Downloading regex-2024.5.15-cp38-cp38-macosx_10_9_x86_64.whl (281 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.8/281.8 kB\u001b[0m \u001b[31m4.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hUsing cached scipy-1.10.1-cp38-cp38-macosx_10_9_x86_64.whl (35.0 MB)\n",
-      "Using cached threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
-      "Using cached tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
-      "Using cached click-8.1.7-py3-none-any.whl (97 kB)\n",
-      "Using cached tqdm-4.66.4-py3-none-any.whl (78 kB)\n",
-      "Installing collected packages: pytz, tzdata, tqdm, threadpoolctl, scipy, regex, joblib, click, scikit-learn, pandas, nltk\n",
-      "Successfully installed click-8.1.7 joblib-1.4.2 nltk-3.8.1 pandas-2.0.3 pytz-2024.1 regex-2024.5.15 scikit-learn-1.3.2 scipy-1.10.1 threadpoolctl-3.5.0 tqdm-4.66.4 tzdata-2024.1\n"
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/sina/Documents/GitHub_Local/PyTorch_Lab/.venv/lib/python3.8/site-packages (from sympy->torch->-r requirements.txt (line 5)) (1.3.0)\n"
      ]
     }
    ],
@@ -82,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +92,7 @@
        "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Imprt data and labels\n",
+    "# Import data and labels\n",
     "with open(\"data/words.json\", 'r') as f1:\n",
     "    words = json.load(f1)\n",
     "with open(\"data/text.json\", 'r') as f2:\n",
@@ -143,32 +117,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dictionaries to store the word to index mappings and vice versa\n",
-    "word2idx = {o:i for i, o in enumerate(words)}\n",
-    "idx2word = {i:o for i, o in enumerate(words)}\n",
+    "word2idx = {o:i for i,o in enumerate(words)}\n",
+    "idx2word = {i:o for i,o in enumerate(words)}\n",
     "\n",
     "# Looking up the mapping dictionary and assigning the index to the respective words\n",
-    "for i, sentece in enumerate(text):\n",
-    "    text[i] = [word2idx[word] if word in word2idx else 0 for word in sentece]\n",
+    "for i, sentence in enumerate(text):\n",
+    "    text[i] = [word2idx[word] if word in word2idx else 0 for word in sentence]\n",
     "    \n",
-    "# Defining a function that either shortens sentences or pads sentences with 0 ot a fixed length\n",
+    "# Defining a function that either shortens sentences or pads sentences with 0 to a fixed length\n",
     "def pad_input(sentences, seq_len):\n",
-    "    features = np.zeros((len(sentences), seq_len), dtype=int)\n",
+    "    features = np.zeros((len(sentences), seq_len),dtype=int)\n",
     "    for ii, review in enumerate(sentences):\n",
-    "        if len(review) !=0:\n",
+    "        if len(review) != 0:\n",
     "            features[ii, -len(review):] = np.array(review)[:seq_len]\n",
-    "        return features\n",
+    "    return features\n",
     "\n",
     "text = pad_input(text, 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "from torchmetrics import Accuracy, Precision, Recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,30 +178,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the classifier class\n",
     "class TicketClassifier(nn.Module):\n",
-    "    \n",
     "    def __init__(self, vocab_size, embed_dim, target_size):\n",
     "        super(TicketClassifier, self).__init__()\n",
     "        self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
     "        self.conv = nn.Conv1d(embed_dim, embed_dim, kernel_size=3, stride=1, padding=1)\n",
     "        self.fc = nn.Linear(embed_dim, target_size)\n",
-    "        \n",
+    "\n",
     "    def forward(self, text):\n",
     "        embedded = self.embedding(text).permute(0, 2, 1)\n",
     "        conved = F.relu(self.conv(embedded))\n",
-    "        conved = conved.mean(dim=2)\n",
-    "        return self.fc(conved)\n",
-    "    "
+    "        conved = conved.mean(dim=2) \n",
+    "        return self.fc(conved)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,38 +210,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an instance of the Ticketclassifier class\n",
+    "# Create an instance of the TicketClassifier class\n",
     "model = TicketClassifier(vocab_size, embedding_dim, target_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "lr = 0.05\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "\n",
     "epochs = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1, Loss: 0.00583980193734169\n",
-      "Epoch: 2, Loss: 0.0040495507717132565\n",
-      "Epoch: 3, Loss: 0.004031120210886001\n"
+      "Epoch: 1, Loss: 0.003709070473909378\n",
+      "Epoch: 2, Loss: 0.001472625359892845\n",
+      "Epoch: 3, Loss: 0.0006527840159833431\n"
      ]
     }
    ],
@@ -279,18 +264,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy_metric = Accuracy(task=\"multiclass\", num_classes=5)\n",
+    "accuracy_metric = Accuracy(task='multiclass', num_classes=5)\n",
     "precision_metric = Precision(task='multiclass', num_classes=5, average=None)\n",
     "recall_metric = Recall(task='multiclass', num_classes=5, average=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,16 +294,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.19200000166893005\n",
-      "Precision (per class): [0.19200000166893005, 0.0, 0.0, 0.0, 0.0]\n",
-      "Recall (per class): [1.0, 0.0, 0.0, 0.0, 0.0]\n"
+      "Accuracy: 0.7829999923706055\n",
+      "Precision (per class): [0.7573964595794678, 0.7121211886405945, 0.940119743347168, 0.7373272180557251, 0.7911646366119385]\n",
+      "Recall (per class): [0.6666666865348816, 0.74210524559021, 0.7268518805503845, 0.8333333134651184, 0.938095211982727]\n"
      ]
     }
    ],
