define OCR model structure
- Created OCRModel class with image and type processing layers.
- Combined features in the forward method and added classifier layers.

--- a/III. Developing Multi-Input Models For OCR/notebook.ipynb
+++ b/III. Developing Multi-Input Models For OCR/notebook.ipynb
@@ -97,6 +97,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a class to define the model's structure\n",
+    "class OCRModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(OCRModel, self).__init__()\n",
+    "        self.image_layer = nn.Sequential(\n",
+    "            nn.Conv2d(1, 16, kernel_size=3, padding=1),\n",
+    "            nn.MaxPool2d(kernel_size=2),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(16*32*32, 128)  \n",
+    "        )\n",
+    "        self.type_layer = nn.Sequential(\n",
+    "            nn.Linear(5, 10),\n",
+    "            nn.ReLU(),\n",
+    "        )\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Linear(128 + 10, 64), \n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 2)  \n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x_image, x_type):\n",
+    "        x_image = self.image_layer(x_image)\n",
+    "        x_type = self.type_layer(x_type)\n",
+    "        x = torch.cat((x_image, x_type), dim=1)  \n",
+    "        return self.classifier(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
