--- a/ColabEnv/playground.ipynb
+++ b/ColabEnv/playground.ipynb
@@ -1,25 +1,443 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PyTorch Book Tutorial PlayGround"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fyTLKYpKV30C"
+      },
+      "source": [
+        "## PyTorch Book Tutorial PlayGround"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install torch\n"
+      ],
+      "metadata": {
+        "id": "FN2mYeInWGJk",
+        "outputId": "1a33bae6-b23d-43ef-9642-407857c52d38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: torch in /usr/local/lib/python3.10/dist-packages (2.4.0+cu121)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch) (3.15.4)\n",
+            "Requirement already satisfied: typing-extensions>=4.8.0 in /usr/local/lib/python3.10/dist-packages (from torch) (4.12.2)\n",
+            "Requirement already satisfied: sympy in /usr/local/lib/python3.10/dist-packages (from torch) (1.13.2)\n",
+            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (from torch) (3.3)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch) (3.1.4)\n",
+            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from torch) (2024.6.1)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch) (2.1.5)\n",
+            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.10/dist-packages (from sympy->torch) (1.3.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "gWyL8CLxV30D"
+      },
+      "outputs": [],
+      "source": [
+        "import torch"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.tensor([1,2,3])"
+      ],
+      "metadata": {
+        "id": "sgInyhN4WB4f",
+        "outputId": "4b900845-5816-4f8f-816a-5fc48a3eaac4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.rand(1).item()"
+      ],
+      "metadata": {
+        "id": "LAG7C8RnWOux",
+        "outputId": "cbe33f97-416a-4b6d-89c9-a3b5d280b985",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9972826838493347"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cpu = torch.rand(1)\n",
+        "cpu.device"
+      ],
+      "metadata": {
+        "id": "l_vK2prpXdUz",
+        "outputId": "61a9f77d-ec9f-4e86-e7ff-31c60bf4534a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cpu')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gpu = cpu.to('cuda')\n",
+        "gpu.device"
+      ],
+      "metadata": {
+        "id": "guUlN0upXqiz",
+        "outputId": "6103f3cb-d543-4404-8044-0b003ebb49ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda', index=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.rand(2, 2).max()"
+      ],
+      "metadata": {
+        "id": "L7j1zh0qX4DA",
+        "outputId": "43c7b285-6938-47b0-8c07-f21b505780df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(0.9047)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor = torch.rand(2, 2).max().item()"
+      ],
+      "metadata": {
+        "id": "JqYQWrRmYbdE"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "long_tensor = torch.tensor([[0,0,1],[1,1,1],[0,0,0]])"
+      ],
+      "metadata": {
+        "id": "fTx-46fNYexX"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "long_tensor.type()"
+      ],
+      "metadata": {
+        "id": "ybPZJqdOYq2a",
+        "outputId": "3d367dcd-e276-40f6-d668-9605d7e60602",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'torch.LongTensor'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float_tensor = long_tensor.to(dtype=torch.float32)"
+      ],
+      "metadata": {
+        "id": "pfA_vAx8Y7E-"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float_tensor.type()"
+      ],
+      "metadata": {
+        "id": "GiZkz0_OZED_",
+        "outputId": "86483057-4f2c-4262-b7d3-0eb774973fd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'torch.FloatTensor'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor = torch.rand(2,2)\n",
+        "random_tensor.log2()"
+      ],
+      "metadata": {
+        "id": "pEUeQYBIZFu3",
+        "outputId": "f1d77912-582e-440e-b65b-a7412f729fe6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-3.1055, -6.3813],\n",
+              "        [-2.4650, -1.4983]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random_tensor.log2_()"
+      ],
+      "metadata": {
+        "id": "bo4pyVzDZTzD",
+        "outputId": "f3a1d6b2-7d19-493e-bf67-3ec4c7ad04ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-3.1055, -6.3813],\n",
+              "        [-2.4650, -1.4983]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flat_tensor = torch.rand(784)\n",
+        "viewed_tensor = flat_tensor.view(1, 28, 28)\n",
+        "viewed_tensor.shape\n"
+      ],
+      "metadata": {
+        "id": "Y1fYfqAQZZlI",
+        "outputId": "5a2c93e3-7ea7-4a62-9d5d-065d7ad9fde4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 28, 28])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reshaped_tensor = flat_tensor.reshape(1, 28, 28)\n",
+        "reshaped_tensor.shape"
+      ],
+      "metadata": {
+        "id": "zOBobRSnZ2bN",
+        "outputId": "c545cf62-e243-456b-d5ae-76419f642444",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 28, 28])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hwc_tensor = torch.rand(640, 480, 3)\n",
+        "chw_tensor = hwc_tensor.permute(2, 0, 1)\n",
+        "chw_tensor.shape"
+      ],
+      "metadata": {
+        "id": "XcDCDPbqbYbP",
+        "outputId": "a97d5697-8aa4-427d-d8f6-4f0e6b3c1083",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 640, 480])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7ByI0l_bZ82d"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
