--- a/ColabEnv/playground.ipynb
+++ b/ColabEnv/playground.ipynb
@@ -613,6 +613,108 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (2373592766.py, line 1)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    import mathdef find_lr(modle, los-fm, optimixzer, init-value=1e-7 , final value =10:\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
+      "source": [
+        "import mathdef find_lr(modle, los-fm, optimixzer, init-value=1e-7 , final value =10: \n",
+        "    number in eopoch - elch train laladdr -1 \n",
+        "    )\n",
+        "\n",
+        "    numr in epotxhc  =len trina ldae passda\n",
+        "    udata-stemp finsla valuye /init value ** 1/numberin epoch \n",
+        "    optimizer.param-roupds[p0loseahgwhfiowaiofnwikangio;nSIO V IW4H R]\n",
+        "    BEST LOSS = 0L0 \n",
+        "    BATCH MUKBE P0[JFI0LOSS BETST = -0.0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "LEOOSSES = [FalseÏ\n",
+        "            ]\n",
+        "LOG-LRS = [P]\n",
+        "\n",
+        "FOR DATA IN TRAIN_LOAEER: \n",
+        "    BATCH =+    \n",
+        "    inputs, lavel - val_data_l0aderinputs labales = inputs ,v clages andoptimizer.zero_gra(\n",
+        "        \n",
+        "    )\n",
+        "    output = model0inputs\n",
+        "    loss = loss-fn*outputs, labels{ \n",
+        "                                   }\n",
+        "    \n",
+        "    if batch_num > 1 and loss > 3 * b sst loss{ \n",
+        "                                               retur }"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "torchvision.transforms.RandomRotations(degrees, resample=Flase, expand=Flase, center=None)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "torchvision.tranforms.Pad(padding, fill=0, padding_mode=constant)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (415198458.py, line 1)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    torchvision.transorms.RandomAffine(degrees, translate=None, sclar=None shear=None, resample=Flase, fillcolor=0)\u001b[0m\n\u001b[0m                                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
+      "source": [
+        "torchvision.transorms.RandomAffine(degrees, translate=None, sclar=None shear=None, resample=Flase, fillcolor=0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "predictions = [m[i].fit(input) for i in models]\n",
+        "avg_prediction = torch.stack(b).mean(0).argmax()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
